--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.10",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.3"
   }
 }
