--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   "author": "",
   "license": "CC-BY-NC-ND-4.0",
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "firebase": "^7.14.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
