--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "SET NODE_ENV=prod node server.js ",
+    "start": "SET NODE_ENV=prod &&node server.js",
     "dev": "SET NODE_ENV=prod && nodemon server.js"
   },
   "author": "",
