--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "SET NODE_ENV=prod &&node server.js",
-    "dev": "SET NODE_ENV=prod && nodemon server.js"
+    "dev": "SET NODE_ENV=prod && nodemon server.js",
+    "test": "SET PORT=5000 && mocha ./api/tests/*.test.js --timeout 10000"
   },
   "author": "",
   "license": "CC-BY-NC-ND-4.0",
   "dependencies": {
     "@google-cloud/storage": "^4.7.0",
+    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
@@ -26,6 +28,10 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^7.2.0",
+    "mocha-logger": "^1.0.6",
     "nodemon": "^2.0.3"
   }
 }
